Thai commit 3/4/2021 1:02pm

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
-body {
+* {
   margin: 0;
+  box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,4 +11,16 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.app{
+  max-width: 1200px;
+  width: 100%;
+  margin: 0 auto;
+  
+}
+
+section {
+  box-shadow: 0 0 5px #ccc;
+  padding: 15px 10px;
 }
